base/smarthome/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: smarthome
spec:
  type: LoadBalancer
  ports:
  - port: 8123
  selector:
    app: homeassistant
